# plant-monitoring-system

./: LICENSE  README.md
docs/: Readme.md
firmware/: Cargo.toml
firmware/src/: main.rs  sensors.rs
frontend/: Cargo.toml
frontend/src/: main.rs
ml/: predict.py  requirements.txt  train.py
server/: Cargo.toml
server/src/: db.rs  main.rs  models.rs
