[package]
name = "plant-monitoring-firmware"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
esp-idf-hal = { version = "0.19", features = ["wifi", "http"] }
embedded-hal = "0.2.6"
